--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Illustrated periodicals -- France'
 - !lcc 'AP'
+- GITenberg
 title: L'Illustration, No. 2497, 3 Janvier 1891
 url: http://www.gutenberg.org/ebooks/44696
